@@ -83,3 +83,7 @@ function display_install_logs_for_result_object(result_file, result_hash)
 {
 	window.open("/index.php?page=view_install_logs&result_file_id=" + result_file + "&result_object=" + result_hash, "_blank", "toolbar=no,scrollbars=yes,resizable=yes,top=100,left=100,width=600,height=400,location=no,menubar=no");
 }
+function display_system_logs_for_result(result_file, system_id)
+{
+	window.open("/index.php?page=view_system_logs&result_file_id=" + result_file + "&system_id=" + system_id, "_blank", "toolbar=no,scrollbars=yes,resizable=yes,top=100,left=100,width=600,height=400,location=no,menubar=no");
+}
